--- a/html/outdoor_product_page.html
+++ b/html/outdoor_product_page.html
@@ -19,9 +19,12 @@
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="/css/product_all.css" />
     <link rel="stylesheet" href="/css/proguct_page.css" />
@@ -63,10 +66,18 @@
           <li class="nav__item">
             <a href="/html/all_product_page.html">전체 상품</a>
           </li>
-          <li class="nav__item"><a href="/html/living_product_page.html">가구 상품</a></li>
-          <li class="nav__item"><a href="/html/outdoor_product_page.html">야외 상품</a></li>
-          <li class="nav__item"><a href="/html/life_product_page.html">생활 상품</a></li>
-          <li class="nav__item"><a href="/html/customer_page.html">고객 지원</a></li>
+          <li class="nav__item">
+            <a href="/html/living_product_page.html">가구 상품</a>
+          </li>
+          <li class="nav__item">
+            <a href="/html/outdoor_product_page.html">야외 상품</a>
+          </li>
+          <li class="nav__item">
+            <a href="/html/life_product_page.html">생활 상품</a>
+          </li>
+          <li class="nav__item">
+            <a href="/html/customer_page.html">고객 지원</a>
+          </li>
         </ul>
       </nav>
       <div class="nav__toggle">
@@ -139,16 +150,35 @@
       <div class="div__item">
         <a href="/html/all_product_page.html">전체 상품</a>
       </div>
-      <div class="div__item"><a href="/html/living_product_page.html">가구 상품</a></div>
-      <div class="div__item"><a href="/html/outdoor_product_page.html">야외 상품</a></div>
-      <div class="div__item"><a href="/html/life_product_page.html">생활 상품</a></div>
-      <div class="div__item"><a href="/html/customer_page.html">고객 지원</a></div>
+      <div class="div__item">
+        <a href="/html/living_product_page.html">가구 상품</a>
+      </div>
+      <div class="div__item">
+        <a href="/html/outdoor_product_page.html">야외 상품</a>
+      </div>
+      <div class="div__item">
+        <a href="/html/life_product_page.html">생활 상품</a>
+      </div>
+      <div class="div__item">
+        <a href="/html/customer_page.html">고객 지원</a>
+      </div>
     </div>
     <div class="badges-container">
       <div class="badge-ai">
-        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-robot badge-item" viewBox="0 0 16 16">
-          <path d="M6 12.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5M3 8.062C3 6.76 4.235 5.765 5.53 5.886a26.6 26.6 0 0 0 4.94 0C11.765 5.765 13 6.76 13 8.062v1.157a.93.93 0 0 1-.765.935c-.845.147-2.34.346-4.235.346s-3.39-.2-4.235-.346A.93.93 0 0 1 3 9.219zm4.542-.827a.25.25 0 0 0-.217.068l-.92.9a25 25 0 0 1-1.871-.183.25.25 0 0 0-.068.495c.55.076 1.232.149 2.02.193a.25.25 0 0 0 .189-.071l.754-.736.847 1.71a.25.25 0 0 0 .404.062l.932-.97a25 25 0 0 0 1.922-.188.25.25 0 0 0-.068-.495c-.538.074-1.207.145-1.98.189a.25.25 0 0 0-.166.076l-.754.785-.842-1.7a.25.25 0 0 0-.182-.135"/>
-          <path d="M8.5 1.866a1 1 0 1 0-1 0V3h-2A4.5 4.5 0 0 0 1 7.5V8a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1v1a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-1a1 1 0 0 0 1-1V9a1 1 0 0 0-1-1v-.5A4.5 4.5 0 0 0 10.5 3h-2zM14 7.5V13a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V7.5A3.5 3.5 0 0 1 5.5 4h5A3.5 3.5 0 0 1 14 7.5"/>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="30"
+          height="30"
+          fill="currentColor"
+          class="bi bi-robot badge-item"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M6 12.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5M3 8.062C3 6.76 4.235 5.765 5.53 5.886a26.6 26.6 0 0 0 4.94 0C11.765 5.765 13 6.76 13 8.062v1.157a.93.93 0 0 1-.765.935c-.845.147-2.34.346-4.235.346s-3.39-.2-4.235-.346A.93.93 0 0 1 3 9.219zm4.542-.827a.25.25 0 0 0-.217.068l-.92.9a25 25 0 0 1-1.871-.183.25.25 0 0 0-.068.495c.55.076 1.232.149 2.02.193a.25.25 0 0 0 .189-.071l.754-.736.847 1.71a.25.25 0 0 0 .404.062l.932-.97a25 25 0 0 0 1.922-.188.25.25 0 0 0-.068-.495c-.538.074-1.207.145-1.98.189a.25.25 0 0 0-.166.076l-.754.785-.842-1.7a.25.25 0 0 0-.182-.135"
+          />
+          <path
+            d="M8.5 1.866a1 1 0 1 0-1 0V3h-2A4.5 4.5 0 0 0 1 7.5V8a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1v1a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-1a1 1 0 0 0 1-1V9a1 1 0 0 0-1-1v-.5A4.5 4.5 0 0 0 10.5 3h-2zM14 7.5V13a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V7.5A3.5 3.5 0 0 1 5.5 4h5A3.5 3.5 0 0 1 14 7.5"
+          />
         </svg>
         <div class="hover-text3">음성 검색</div>
       </div>
@@ -189,133 +219,149 @@
 
     <script>
       // JavaScript
-      $(document).ready(function() {
-        $('.nav__toggle').click(function() {
-            $('.nav__div').toggle();
+      $(document).ready(function () {
+        $(".nav__toggle").click(function () {
+          $(".nav__div").toggle();
         });
 
         // 화면 크기 변경 시 자동으로 네비게이션 숨기기
-        $(window).resize(function() {
-            $('.nav__div').hide();
+        $(window).resize(function () {
+          $(".nav__div").hide();
         });
-    });
+      });
     </script>
 
     <!--==================== Login.html ====================-->
-<div class="home">
-  <div class="blur-background"></div>
-  <div class="form_container">
-    <i class="uil uil-times form_close"></i>
-    <!-- Login From -->
-    <div class="form login_form"  >
-      <form action="#" class="login-reset" id="form">
-        <h2>로그인</h2>
-  
-        <div class="input_box">
-          <input type="email" placeholder="이메일을 입력하세요" required />
-          <i class="uil uil-envelope-alt email"></i>
+    <div class="home">
+      <div class="blur-background"></div>
+      <div class="form_container">
+        <i class="uil uil-times form_close"></i>
+        <!-- Login From -->
+        <div class="form login_form">
+          <form action="#" class="login-reset" id="form">
+            <h2>로그인</h2>
+
+            <div class="input_box">
+              <input type="email" placeholder="이메일을 입력하세요" required />
+              <i class="uil uil-envelope-alt email"></i>
+            </div>
+            <div class="input_box">
+              <input
+                type="password"
+                placeholder="비밀번호를 입력하세요"
+                required
+              />
+              <i class="uil uil-lock password"></i>
+              <i class="uil uil-eye-slash pw_hide"></i>
+            </div>
+
+            <div class="option_field">
+              <span class="checkbox">
+                <input type="checkbox" id="check" />
+                <label for="check">로그인 유지</label>
+              </span>
+              <a href="#" class="forgot_pw">비밀번호 찾기</a>
+            </div>
+
+            <button type="reset" class="button logged-btn">로그인하기</button>
+
+            <div class="login_signup">
+              계정 없으신가요? <a href="#" id="signup">회원 가입</a>
+            </div>
+          </form>
         </div>
-        <div class="input_box">
-          <input type="password" placeholder="비밀번호를 입력하세요" required />
-          <i class="uil uil-lock password"></i>
-          <i class="uil uil-eye-slash pw_hide"></i>
+        <!-- Signup From -->
+        <div class="form signup_form">
+          <form action="#">
+            <h2>회원 가입</h2>
+
+            <div class="input_box">
+              <input type="email" placeholder="이메일을 입력하기" required />
+              <i class="uil uil-envelope-alt email"></i>
+            </div>
+            <div class="input_box" id="new-pw">
+              <input
+                type="password"
+                placeholder="새로운 비밀번호 만들기"
+                required
+              />
+              <i class="uil uil-lock password"></i>
+              <i class="uil uil-eye-slash pw_hide"></i>
+            </div>
+            <div class="input_box" id="chk-pw">
+              <input type="password" placeholder="비밀번호 확인" required />
+              <i class="uil uil-lock password"></i>
+              <i class="uil uil-eye-slash pw_hide"></i>
+            </div>
+            <button type="reset" class="button signed-in">회원 가입하기</button>
+            <div class="login_signup">
+              이미 계정 있으신가요? <a href="#" id="login">로그인</a>
+            </div>
+          </form>
         </div>
-  
-        <div class="option_field">
-          <span class="checkbox">
-            <input type="checkbox" id="check" />
-            <label for="check">로그인 유지</label>
-          </span>
-          <a href="#" class="forgot_pw">비밀번호 찾기</a>
-        </div>
-  
-        <button type="reset" class="button logged-btn">로그인하기</button>
-  
-        <div class="login_signup">계정 없으신가요? <a href="#" id="signup">회원 가입</a></div>
-      </form>
+      </div>
     </div>
-    <!-- Signup From -->
-    <div class="form signup_form">
-      <form action="#">
-        <h2>회원 가입</h2>
-  
-        <div class="input_box">
-          <input type="email" placeholder="이메일을 입력하기" required />
-          <i class="uil uil-envelope-alt email"></i>
-        </div>
-        <div class="input_box" id="new-pw">
-          <input type="password" placeholder="새로운 비밀번호 만들기" required />
-          <i class="uil uil-lock password"></i>
-          <i class="uil uil-eye-slash pw_hide"></i>
-        </div>
-        <div class="input_box" id="chk-pw">
-          <input type="password" placeholder="비밀번호 확인" required />
-          <i class="uil uil-lock password"></i>
-          <i class="uil uil-eye-slash pw_hide"></i>
-        </div>
-        <button type="reset" class="button signed-in">회원 가입하기</button>
-        <div class="login_signup">이미 계정 있으신가요? <a href="#" id="login">로그인</a></div>
-      </form>
-    </div>
-  </div>
-</div>    
-<!--==================== Login script ====================-->
-<script>
-const formOpenlg = document.querySelector("#login_open"),
-formOpenBtn = document.querySelector("#form-open"),
-home = document.querySelector(".home"),
-formContainer = document.querySelector(".form_container"),
-formCloseBtn = document.querySelector(".form_close"),
-signupBtn = document.querySelector("#signup"),
-loginBtn = document.querySelector("#login"),
-pwShowHide = document.querySelectorAll(".pw_hide"),
-loggedBtn=document.querySelector(".logged-btn"),
-signedBtn=document.querySelector(".signed-in");
+    <!--==================== Login script ====================-->
+    <script>
+      const formOpenlg = document.querySelector("#login_open"),
+        formOpenBtn = document.querySelector("#form-open"),
+        home = document.querySelector(".home"),
+        formContainer = document.querySelector(".form_container"),
+        formCloseBtn = document.querySelector(".form_close"),
+        signupBtn = document.querySelector("#signup"),
+        loginBtn = document.querySelector("#login"),
+        pwShowHide = document.querySelectorAll(".pw_hide"),
+        loggedBtn = document.querySelector(".logged-btn"),
+        signedBtn = document.querySelector(".signed-in");
 
+      console.log(formContainer);
 
-console.log(formContainer);
+      formOpenlg.addEventListener("click", () => home.classList.add("show"));
+      formOpenBtn.addEventListener("click", () => home.classList.add("show"));
+      formCloseBtn.addEventListener("click", () =>
+        home.classList.remove("show")
+      ); // x버튼
 
-formOpenlg.addEventListener("click", () => home.classList.add("show"));
-formOpenBtn.addEventListener("click", () => home.classList.add("show"));
-formCloseBtn.addEventListener("click", () => home.classList.remove("show")); // x버튼
-
-pwShowHide.forEach((icon) => {
-icon.addEventListener("click", () => {
-let getPwInput = icon.parentElement.querySelector("input");
-if (getPwInput.type === "password") {
-getPwInput.type = "text";
-icon.classList.replace("uil-eye-slash", "uil-eye");
-} else {
-getPwInput.type = "password";
-icon.classList.replace("uil-eye", "uil-eye-slash");
-}
-});
-});
-loggedBtn.addEventListener("click",(e)=>{
-  alert("로그인에 성공하셨습니다!");
-  home.classList.remove("show");
-});
-signedBtn.addEventListener("click",(e)=>{
-  event.preventDefault();
-  var newPw = document.getElementById('new-pw').querySelector('input').value;
-  var chkPw = document.getElementById('chk-pw').querySelector('input').value;
-  if (newPw === chkPw) {
-    alert("회원 가입에 성공하셨습니다!");
-    home.classList.remove("show");
-  } else {
-    alert("설정한 비밀 번호와 비밀 번호 확인이 일치하지 않습니다.")
-  } 
-});
-signupBtn.addEventListener("click", (e) => {
-  e.preventDefault();
-  formContainer.classList.add("active");
-});
-loginBtn.addEventListener("click", (e) => {
-formContainer.classList.remove("active");
-});
-
-</script>
-<!----------------- Login script ----------->
+      pwShowHide.forEach((icon) => {
+        icon.addEventListener("click", () => {
+          let getPwInput = icon.parentElement.querySelector("input");
+          if (getPwInput.type === "password") {
+            getPwInput.type = "text";
+            icon.classList.replace("uil-eye-slash", "uil-eye");
+          } else {
+            getPwInput.type = "password";
+            icon.classList.replace("uil-eye", "uil-eye-slash");
+          }
+        });
+      });
+      loggedBtn.addEventListener("click", (e) => {
+        alert("로그인에 성공하셨습니다!");
+        home.classList.remove("show");
+      });
+      signedBtn.addEventListener("click", (e) => {
+        event.preventDefault();
+        var newPw = document
+          .getElementById("new-pw")
+          .querySelector("input").value;
+        var chkPw = document
+          .getElementById("chk-pw")
+          .querySelector("input").value;
+        if (newPw === chkPw) {
+          alert("회원 가입에 성공하셨습니다!");
+          home.classList.remove("show");
+        } else {
+          alert("설정한 비밀 번호와 비밀 번호 확인이 일치하지 않습니다.");
+        }
+      });
+      signupBtn.addEventListener("click", (e) => {
+        e.preventDefault();
+        formContainer.classList.add("active");
+      });
+      loginBtn.addEventListener("click", (e) => {
+        formContainer.classList.remove("active");
+      });
+    </script>
+    <!----------------- Login script ----------->
     <!--==================== CART.html ====================-->
     <div class="cart" id="cart">
       <div action="" class="cart__form">
@@ -440,10 +486,26 @@ formContainer.classList.remove("active");
             <div class="content">
               <div class="swiper" id="modal_7">
                 <div class="swiper-wrapper">
-                  <img class="swiper-slide" id="item__1" src="/product_img/item7_1.jpg" />
-                  <img class="swiper-slide" id="item__2" src="/product_img/item7_2.jpg" />
-                  <img class="swiper-slide" id="item__3" src="/product_img/item7_3.jpg" />
-                  <img class="swiper-slide" id="item__4" src="/product_img/item7_4.jpg" />
+                  <img
+                    class="swiper-slide"
+                    id="item__1"
+                    src="/product_img/item7_1.jpg"
+                  />
+                  <img
+                    class="swiper-slide"
+                    id="item__2"
+                    src="/product_img/item7_2.jpg"
+                  />
+                  <img
+                    class="swiper-slide"
+                    id="item__3"
+                    src="/product_img/item7_3.jpg"
+                  />
+                  <img
+                    class="swiper-slide"
+                    id="item__4"
+                    src="/product_img/item7_4.jpg"
+                  />
                 </div>
                 <div class="swiper-pagination"></div>
                 <div class="swiper-button-prev">
@@ -455,10 +517,26 @@ formContainer.classList.remove("active");
               </div>
               <div class="swiper" id="modal_8">
                 <div class="swiper-wrapper">
-                  <img class="swiper-slide" id="item__1" src="/product_img/item8_1.jpg" />
-                  <img class="swiper-slide" id="item__2" src="/product_img/item8_2.jpg" />
-                  <img class="swiper-slide" id="item__3" src="/product_img/item8_3.jpg" />
-                  <img class="swiper-slide" id="item__4" src="/product_img/item8_4.jpg" />
+                  <img
+                    class="swiper-slide"
+                    id="item__1"
+                    src="/product_img/item8_1.jpg"
+                  />
+                  <img
+                    class="swiper-slide"
+                    id="item__2"
+                    src="/product_img/item8_2.jpg"
+                  />
+                  <img
+                    class="swiper-slide"
+                    id="item__3"
+                    src="/product_img/item8_3.jpg"
+                  />
+                  <img
+                    class="swiper-slide"
+                    id="item__4"
+                    src="/product_img/item8_4.jpg"
+                  />
                 </div>
                 <div class="swiper-pagination"></div>
                 <div class="swiper-button-prev">
@@ -470,6 +548,9 @@ formContainer.classList.remove("active");
               </div>
               <div id="content" class="description"></div>
             </div>
+            <div class="save_button">
+              <a class="button btnSave but_btn"></a>
+            </div>
             <div class="buy_button">
               <a href="/html/purchase.html" class="button btnFloat but_btn"></a>
             </div>
@@ -480,19 +561,23 @@ formContainer.classList.remove("active");
       <div class="grid">
         <div class="card image-container">
           <img id="item7" src="/item_jpgs/item7.jpg" alt="상품 7" />
-          <div class="save-image-btn" onclick="alert('이미지를 저장합니다.')">이미지 저장해서 보기</div>
+          <div class="save-image-btn" onclick="alert('이미지를 저장합니다.')">
+            이미지 저장해서 보기
+          </div>
           <h2>아이코닉 부스</h2>
           <p>6,000,000원</p>
         </div>
         <div class="card image-container">
           <img id="item8" src="/item_jpgs/item8.jpg" alt="상품 8" />
-          <div class="save-image-btn" onclick="alert('이미지를 저장합니다.')">이미지 저장해서 보기</div>
+          <div class="save-image-btn" onclick="alert('이미지를 저장합니다.')">
+            이미지 저장해서 보기
+          </div>
           <h2>아크 의자</h2>
           <p>1,150,000원</p>
         </div>
       </div>
     </div>
-    
+
     <script>
       const btn_data7 = (document.getElementById("item7").onclick =
         function () {
@@ -593,7 +678,7 @@ formContainer.classList.remove("active");
       // $(document).ready(function () {});
     </script>
 
-  <article class="body-back"></article>
+    <article class="body-back"></article>
 
     <footer>
       <div class="footer">
